First Part Patch
First part patch, far from finished!

--- a/CSI-Stock-Patch.cfg
+++ b/CSI-Stock-Patch.cfg
@@ -19,15 +19,19 @@
 {
 	@TechRequired = start
 }
-@PART[Shrimp]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[Shrimp|miniFuelTank]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = basicRocketry
 }
-@PART[structuralIBeam3|strutCube|strutOcto|structuralIBeam1|structuralIBeam2|structuralMiniNode|structuralPanel1|structuralPanel2|Mk1FuselageStructural|trussAdapter|trussPiece1x|trussPiece3x|stackPoint1|stationHub]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[stationHub]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = stations
+}
+@PART[structuralIBeam3|strutCube|strutOcto|structuralIBeam1|structuralIBeam2|structuralMiniNode|structuralPanel1|structuralPanel2|Mk1FuselageStructural|trussAdapter|trussPiece1x|trussPiece3x|stackPoint1]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = structures1
 }
-@PART[miniFuelTank|rcsTankMini|Decoupler_0|Separator_0|flagPartSize1]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[Decoupler_0|Separator_0|flagPartSize1]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = fabrication
 }
@@ -39,15 +43,11 @@
 {
 		@TechRequired = engineering101
 }
-@PART[SurfAntenna]:NEEDS[CommunityTechTree,RemoteTech/Parts]:BEFORE[zzzCSITechTree]
-{
-	@TechRequired = engineering101
-}
-@PART[solidBooster_sm_v2|microEngine_v2|radialEngineMini_v2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[solidBooster_sm_v2|microEngine_v2|radialEngineMini_v2|rcsTankMini]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = generalRocketry
 }
-@PART[launchClamp1|Decoupler_1|Separator_1|radialDecoupler|adapterSmallMiniShort|adapterSmallMiniTall|stackBiCoupler_v2|roverWheel2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[launchClamp1|Decoupler_1|Separator_1|radialDecoupler|adapterSmallMiniShort|adapterSmallMiniTall|stackBiCoupler_v2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = basicConstruction
 }
@@ -59,7 +59,7 @@
 {
 		@TechRequired = stability
 }
-@PART[parachuteSingle|HeatShield0|miniLandingLeg]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[parachuteSingle|HeatShield0|miniLandingLeg|evaChute]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = survivability
 }
@@ -99,6 +99,10 @@
 {
 	@TechRequired = batteryTech
 }
+@PART[roverWheel2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+{
+	@TechRequired = groundScience
+}
 @PART[sepMotor1|liquidEngine3_v2|liquidEngineMini_v2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = propulsionSystems
@@ -127,20 +131,23 @@
 {
 	@TechRequired = advLanding
 }
-@PART[telescopicLadder]:NEEDS[CommunityTechTree|LaunchEscapeSystem]:BEFORE[zzzCSITechTree]
+@PART[evajetpack]:NEEDS[CommunityTechTree|LaunchEscapeSystem]:BEFORE[zzzCSITechTree]
 {
 	@TechRequired = spaceExploration
 }
-@PART[mediumDishAntenna|sensorAccelerometer]:NEEDS[CommunityTechTree,RemoteTech]
+@PART[sensorAccelerometer]:NEEDS[CommunityTechTree,RemoteTech]
 {
 	@TechRequired = miniaturization
 }
 
-@PART[solarPanels1|solarPanels2|ksp_r_largeBatteryPack]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[ksp_r_largeBatteryPack]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 	@TechRequired = electrics
 }
-
+@PART[solarPanels1|solarPanels2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+{
+	@TechRequired = solarTech
+}
 @PART[radPanelLg|radPanelEdge|foldingRadSmall]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 	@TechRequired = earlyHeatManagement
@@ -180,7 +187,7 @@
 	@TechRequired = supersonicFlight
 }
 
-@PART[probeCoreHex_v2|vernierEngine]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[probeCoreHex_v2|vernierEngine|mediumDishAntenna|RelayAntenna5]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
 	@TechRequired = specializedControl
 }
@@ -425,7 +432,7 @@
 {
 	@TechRequired = simpleCommandModules
 }
-@PART[ServiceModule18]:NEEDS[CommunityTechTree,SquadExpansion/MakingHistory]:BEFORE[zzzCSITechTree]
+@PART[ServiceModule18|smallCargoContainer|ConformalStorageUnit]:NEEDS[CommunityTechTree,SquadExpansion/MakingHistory]:BEFORE[zzzCSITechTree]
 {
 	@TechRequired = storageTech
 }
