--- a/CSI-TechTree-Patch.cfg
+++ b/CSI-TechTree-Patch.cfg
@@ -1,42 +1,9 @@
 @TechTree:NEEDS[CommunityTechTree]:FOR[zzzCSITechTree]
 {
-	@RDNode:HAS[#id[efficientFlightSystems]]
-	{
-		@cost = 0
-		@hideEmpty = False
-		@anyToUnlock = False
-		@pos = -3900,2240,0
-		@scale = 0.5
-		-Parent {}
-	}
-	@RDNode:HAS[#id[specializedFlightSystems]]
-	{
-		@cost = 0
-		@hideEmpty = False
-		@anyToUnlock = False
-		@pos = -3900,2200,0
-		@scale = 0.5
-		-Parent {}
-	}
-	@RDNode:HAS[#id[automation]]
-	{
-		@cost = 0
-		@hideEmpty = False
-		@anyToUnlock = False
-		@pos = -3900,2160,0
-		@scale = 0.5
-		-Parent {}
-		-Parent {}
-	}
-	@RDNode:HAS[#id[experimentalMotors]]
-	{
-		@cost = 0
-		@hideEmpty = False
-		@anyToUnlock = False
-		@pos = -3900,2120,0
-		@scale = 0.5
-		-Parent {}
-	}
+	-RDNode:HAS[#id[efficientFlightSystems]] {}
+	-RDNode:HAS[#id[specializedFlightSystems]] {}
+	-RDNode:HAS[#id[automation]] {}
+	-RDNode:HAS[#id[experimentalMotors]] {}
 	RDNode
 	{
 		id = tier1
@@ -190,6 +157,7 @@
 		@cost = 20
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = CSITechTree/Icon/csi_icon_basicFlightControl
 		@pos = -3600,1760,0
 		@scale = 0.5
 		-Parent {}
@@ -197,6 +165,7 @@
 {
 @parentID = aeronautics
 }
+		@title = #LOC_CSI_stability_title
 	}
 	@RDNode:HAS[#id[survivability]]
 	{
@@ -205,6 +174,18 @@
 		@anyToUnlock = False
 		@pos = -3600,1660,0
 		@scale = 0.5
+	}
+	@RDNode:HAS[#id[basicScience]]
+	{
+		@cost = 20
+		@hideEmpty = False
+		@anyToUnlock = False
+		@pos = -3600,1560,0
+		@scale = 0.5
+		@Parent
+{
+@parentID = engineering101
+}
 	}
 	RDNode
 	{
@@ -327,13 +308,24 @@
 		@pos = -3500,1660,0
 		@scale = 0.5
 	}
-	@RDNode:HAS[#id[basicScience]]
+	RDNode
 	{
-		@cost = 45
-		@hideEmpty = False
-		@anyToUnlock = False
-		@pos = -3500,1560,0
-		@scale = 0.5
+		id = groundScience
+		title = #LOC_CSI_groundScience_title
+		description = #LOC_CSI_groundScience_description
+		cost = 45
+		hideEmpty = False
+		nodeName = node4_groundScience
+		anyToUnlock = False
+		icon = CSITechTree/Icon/csi_icon_groundScience
+		pos = -3500,1560,0
+		scale = 0.5
+		Parent
+		{
+			parentID = basicScience
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
 		Parent
 		{
 			parentID = gadgets
@@ -466,6 +458,7 @@
 		@cost = 90
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = CSITechTree/Icon/csi_icon_landing
 		@pos = -3400,1720,0
 		@scale = 0.5
 		-Parent:HAS[#parentID[aviation]] {}
@@ -511,6 +504,10 @@
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
+		@Parent:HAS[#parentID[basicScience]]
+{
+@parentID = groundScience
+}
 	}
 	@RDNode:HAS[#id[spaceExploration]]
 	{
@@ -519,6 +516,10 @@
 		@anyToUnlock = False
 		@pos = -3400,1560,0
 		@scale = 0.5
+		@Parent
+{
+@parentID = groundScience
+}
 	}
 	@RDNode:HAS[#id[miniaturization]]
 	{
@@ -527,6 +528,10 @@
 		@anyToUnlock = False
 		@pos = -3400,1520,0
 		@scale = 0.5
+		@Parent
+{
+@parentID = groundScience
+}
 	}
 	@RDNode:HAS[#id[electrics]]
 	{
@@ -539,6 +544,25 @@
 {
 @parentID = batteryTech
 }
+	}
+	RDNode
+	{
+		id = solarTech
+		title = #LOC_CSI_solarTech_title
+		description = #LOC_CSI_solarTech_description
+		cost = 90
+		hideEmpty = False
+		nodeName = node5_solarTech
+		anyToUnlock = False
+		icon = CSITechTree/Icon/csi_icon_solarTech
+		pos = -3400,1400,0
+		scale = 0.5
+		Parent
+		{
+			parentID = batteryTech
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
 	}
 	RDNode
 	{
@@ -750,6 +774,12 @@
 {
 @parentID = electrics
 }
+		Parent
+		{
+			parentID = solarTech
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
 	}
 	@RDNode:HAS[#id[heatManagementSystems]]
 	{
@@ -1073,10 +1103,13 @@
 		@anyToUnlock = False
 		@pos = -3100,2040,0
 		@scale = 0.5
-		@Parent
-{
-@parentID = rocketry7
-}
+		-Parent {}
+		Parent
+		{
+			parentID = rocketry7
+			lineFrom = RIGHT
+			lineTo = LEFT
+		}
 	}
 	@RDNode:HAS[#id[highPerformanceFuelSystems]]
 	{
