--- a/Mod Support/ReStockPlus.cfg
+++ b/Mod Support/ReStockPlus.cfg
@@ -20,14 +20,14 @@
 		@TechRequired = aviation
 }
 
-@PART[restock-fuel-tank-0625-2|restock-fuel-tank-0625-3|restock-decoupler-radial-tiny-1|restock-nosecone-0625-1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
+@PART[restock-decoupler-radial-tiny-1|restock-nosecone-0625-1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = fabrication
 }
 
-@PART[restock-fuel-tank-0625-1|restock-fueltank-sphere-125-1]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
+@PART[restock-fueltank-sphere-125-1]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = basicConstruction
+		@TechRequired = basicFuelSystems
 }
 
 @PART[restock-fairing-base-0625-1]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
@@ -40,9 +40,17 @@
 		@TechRequired = gadgets
 }
 
-@PART[restock-engine-torch|restock-engine-125-valiant|restock-engine-125-pug]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
+@PART[restock-engine-torch|restock-fuel-tank-0625-3]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = advRocketry
+		@TechRequired = basicRocketry
+}
+@PART[restock-fueltank-sphere-0625-1|restock-fuel-tank-0625-1|restock-fuel-tank-0625-2]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = generalRocketry
+}
+@PART[restock-engine-125-valiant|restock-engine-125-pug]:NEEDS[CommunityTechTree&ReStockPlus]:BEFORE[zzzCSITechTree]
+{
+		@TechRequired = advRocketryocketry
 }
 
 @PART[restock-rcs-block-multi-mini-2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
@@ -62,7 +70,7 @@
 
 @PART[restock-antenna-stack-2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = electrics
+		@TechRequired = stability
 }
 
 @PART[restock-fuel-tank-375-4|restock-nosecone-375-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
@@ -80,9 +88,9 @@
 		@TechRequired = commandModules
 }
 
-@PART[restock-relay-radial-2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
+@PART[restock-relay-radial-2_v2]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = precisionEngineering
+		@TechRequired = advFlightControl
 }
 
 @PART[restock-engine-boar|restock-srb-anvil-1]:NEEDS[CommunityTechTree,ReStockPlus]:BEFORE[zzzCSITechTree]
