Mod Support Patches

--- a/Mod Support/StationPartsExpansionRedux.cfg
+++ b/Mod Support/StationPartsExpansionRedux.cfg
@@ -1,52 +1,33 @@
 //SSPX
 //
 //
-@PART[sspx-hub-125-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
+// recycling
+// hydroponics
+// stations
+@PART[sspx-hub-125-1|sspx-cupola-125-1|sspx-attach-125-1|sspx-tube-125-1|sspx-tube-125-2|sspx-tube-125-3]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
 {
-  @TechRequired = advConstruction
+  @TechRequired = stations
 }
-
-@PART[sspx-cupola-125-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = simpleCommandModules
-}
-
-@PART[sspx-attach-125-1|sspx-tube-125-1|sspx-tube-125-2|sspx-tube-125-3]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = spaceExploration
-}
-
-@PART[sspx-hub-25-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = specializedConstruction
-}
-
-@PART[sspx-core-125-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = commandModules
-}
-
-@PART[sspx-attach-25-1|sspx-tube-25-1|sspx-tube-25-2|sspx-tube-25-3]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = advExploration
-}
-
-@PART[sspx-core-25-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = heavyCommandModules
-}
-
-@PART[sspx-attach-375-1|sspx-tube-375-1|sspx-tube-375-2|sspx-tube-375-3]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = logistics
-}
-
-@PART[sspx-cupola-375-1|sspx-core-375-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
-{
-  @TechRequired = specializedCommandModules
-}
-
-@PART[sspx-lab-375-1|sspx-habitation-25-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
+// shortTermHabitation
+@PART[sspx-hub-25-1|sspx-core-125-1|sspx-attach-25-1|sspx-tube-25-1|sspx-tube-25-2|sspx-tube-25-3|sspx-core-25-1|sspx-habitation-25-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
 {
   @TechRequired = shortTermHabitation
 }
+// longTermHabitation
+// advancedStations
+@PART[sspx-attach-375-1|sspx-tube-375-1|sspx-tube-375-2|sspx-tube-375-3|sspx-cupola-375-1|sspx-core-375-1|sspx-lab-375-1]:NEEDS[CommunityTechTree,StationPartsExpansionRedux]:BEFORE[zzzCSITechTree]
+{
+  @TechRequired = advancedStations
+}
+// colonization
+// advColonization
+
+
+
+
+
+
+
+
+
+
