--- a/Mod Support/zzzRemovedNodes.cfg
+++ b/Mod Support/zzzRemovedNodes.cfg
@@ -1,24 +1,38 @@
 // Some nodes have been removed from the tech tree
 // This moves any parts that may use them to other nodes
-// so they don't end up in the Twilight Zone.
-
-//merged with Recycling
-// @PART[*]:HAS[#TechRequired[storageTech]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-// {
- // TechRequired = recycling
-// }
-// //merged with Scanning Tech
-// @PART[*]:HAS[#TechRequired[fieldScience]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-// {
- // TechRequired = scienceTech
-// }
-// //merged with Advance Unmanned
-// @PART[*]:HAS[#TechRequired[automation]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-// {
- // TechRequired = advUnmanned
-// }
-// //merged with Advanced Science Tech
-// @PART[*]:HAS[#TechRequired[specializedScienceTech]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-// {
- // TechRequired = advScienceTech
-// }
+@PART[*]:HAS[#TechRequired[efficientFlightSystems]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+	{
+		@TechRequired = supersonicFlight	
+	}
+@PART[*]:HAS[#TechRequired[specializedFlightSystems]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = expAircraftEngines
+}
+@PART[*]:HAS[#TechRequired[automation]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = advUnmanned
+}
+@PART[*]:HAS[#TechRequired[experimentalMotors]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = mechatronics
+}
+@PART[*]:HAS[#TechRequired[miniaturization]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = spaceExploration
+}
+@PART[*]:HAS[#TechRequired[precisionEngineering]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = advExploration
+}
+@PART[*]:HAS[#TechRequired[electronics]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = scienceTech
+}
+@PART[*]:HAS[#TechRequired[fieldScience]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = advScienceTech
+}
+@PART[*]:HAS[#TechRequired[specializedScienceTech]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
+{
+ TechRequired = experimentalScience
+}
