--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -27,8 +27,8 @@ Localization
 		#LOC_CSI_aeronautics_title = Aeronautics
 		#LOC_CSI_aeronautics_description = Aeronautics
 //earlyAviation
-		#LOC_CSI_earlyAviation_title = Early Aviation
-		#LOC_CSI_earlyAviation_description = Early Aviation.
+		#LOC_CSI_earlyAviation_title = Basic Aviation
+		#LOC_CSI_earlyAviation_description = Basic Aviation.
 //basicConstruction
 		#LOC_CSI_basicConstruction_title = Basic Construction
 		#LOC_CSI_basicConstruction_description = Building things from metal and stuff.
@@ -75,8 +75,30 @@ Localization
 //advancedStations
 		#LOC_CSI_advancedStations_title = Advanced Stations
 		#LOC_CSI_advancedStations_description = Space, our new home
-//advancedStations
+//basicLogistics
 		#LOC_CSI_basicLogistics_title = Basic Logistics
 		#LOC_CSI_basicLogistics_description = Reinforced Cardboard Boxes.
+//groundScience
+		#LOC_CSI_groundScience_title = Ground Science
+		#LOC_CSI_groundScience_description = Before we look up, we must look down.
+//solarTech
+		#LOC_CSI_solarTech_title = Solar Technology
+		#LOC_CSI_solarTech_description = The sun is energy, engery is power.
+//stability
+		#LOC_CSI_stability_title = Basic Flight Control
+//comms
+		#LOC_CSI_comms1_title = C2+ Communications
+		#LOC_CSI_comms1_description = Enchanced Communications Technology
+		#LOC_CSI_comms2_title = C3 Communications
+		#LOC_CSI_comms2_description = Advanced Communications Technology
+		#LOC_CSI_comms3_title = C4 Communications
+		#LOC_CSI_comms3_description = Specialized Communications Technology
+		#LOC_CSI_comms4_title = C5 Communications
+		#LOC_CSI_comms4_description = Deep Space Communications
+		#LOC_CSI_comms5_title = C6 Communications
+		#LOC_CSI_comms5_description = Extreme Range Telecoms
+//scientificOutposts
+		#LOC_CSI_scientificOutposts_title = Plantery Logistics
+
 	}
 }
