Updated Node Descriptions

--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -1,22 +1,10 @@
 Localization
 {
   en-us
-  {
-//liquidEngineLVT05
-		#LOC_CSI_liquidEngineLVT05_title = LV-T05 "Cogswell" Liquid Fuel Engine
-		#LOC_CSI_liquidEngineLVT05_description = LV-T05 "Cogswell" Liquid Fuel Engine
-//liquidEngineLVT10
-		#LOC_CSI_liquidEngineLVT10_title = LV-T10 "Spacely" Liquid Fuel Engine
-		#LOC_CSI_liquidEngineLVT10_description = LV-T10 "Spacely" Liquid Fuel Engine
-//solidBoosterRT1
-		#LOC_CSI_solidBoosterRT1_title = RT-1 "Astro" Solid Fuel Booster
-		#LOC_CSI_solidBoosterRT1_description = RT-1 "Astro" Solid Fuel Booster		
+  {	
 //structures1
 		#LOC_CSI_structures1_title = Structures - small
 		#LOC_CSI_structures1_description = Small structural parts.
-//structures1p5
-		#LOC_CSI_structures1p5_title = Structures - medium
-		#LOC_CSI_structures1p5_description = 1.875m structural parts.
 //structures2
 		#LOC_CSI_structures2_title = Structures - Medium
 		#LOC_CSI_structures2_description = Medium structural parts.
@@ -54,21 +42,21 @@ Localization
 //rocketry7
 		#LOC_CSI_rocketry7_title = Quite Heavy Rocketry
 		#LOC_CSI_rocketry7_description = These rockets are very heavy indeed. Do you think the launch pad can hold them?
-//specializedRocketry7
-		#LOC_CSI_specializedRocketry7_title = Specialized Rocketry Tier 7
-		#LOC_CSI_specializedRocketry7_description = Proper title needed...
-//specializedRocketry8
-		#LOC_CSI_specializedRocketry8_title = Specialized Rocketry Tier 8
-		#LOC_CSI_specializedRocketry8_description = Proper title needed...
-//specializedRocketry9
-		#LOC_CSI_specializedRocketry9_title = Specialized Rocketry Tier 9
-		#LOC_CSI_specializedRocketry9_description = Proper title needed...
-//specializedRocketry10
-		#LOC_CSI_specializedRocketry10_title = Specialized Rocketry Tier 10
-		#LOC_CSI_specializedRocketry10_description = Proper title needed...
-//specializedRocketry11
-		#LOC_CSI_specializedRocketry11_title = Specialized Rocketry Tier 11
-		#LOC_CSI_specializedRocketry11_description = Proper title needed...
+//efficientPropulsion
+		#LOC_CSI_efficientPropulsion_title = Efficient Propulsion
+		#LOC_CSI_efficientPropulsion_description = What if we made the engine bells longer? Well, here we are, with a set of efficient vacuum engines.
+// highEfficiencyPropulsion
+		#LOC_CSI_highEfficiencyPropulsion_title = High Efficiency Propulsion
+		#LOC_CSI_highEfficiencyPropulsion_description = Our engineers have combined the mindset of bigger is better and have delivered a new set of engines, that will propel you further than ever before.
+// higherEfficiencyPropulsion
+		#LOC_CSI_higherEfficiencyPropulsion_title = Higher Efficiency Propulsion
+		#LOC_CSI_higherEfficiencyPropulsion_description = At this rate, one starts to wonder how powerful the vacuum technology can get.
+// veryHighEfficiencyPropulsion
+		#LOC_CSI_veryHighEfficiencyPropulsion_title = Very High Efficiency Propulsion
+		#LOC_CSI_veryHighEfficiencyPropulsion_description = When everybody thought it couldn't get better, R&D gave us these engines. We might need to investigate in order to stop this rapid technology progression!
+// tremendousEfficiencyPropulsion
+		#LOC_CSI_tremendousEfficiencyPropulsion_title = Tremendous Efficiency Propulsion
+		#LOC_CSI_tremendousEfficiencyPropulsion_description = At this point you should reconsider why you would even need such big and powerful vacuum engines. Space is the limit!
 //stations
 		#LOC_CSI_stations_title = Stations
 		#LOC_CSI_stations_description = We came, we saw, we stayed
