Updated Node Names and Icons
Updated Node Names and Icons

--- a/CSI-TechTree-Patch.cfg
+++ b/CSI-TechTree-Patch.cfg
@@ -340,14 +340,14 @@
 	}
 	RDNode
 	{
-		id = specializedRocketry7
-		title = #LOC_CSI_specializedRocketry7_title
-		description = #LOC_CSI_specializedRocketry7_description
+		id = efficientPropulsion
+		title = #LOC_CSI_efficientPropulsion_title
+		description = #LOC_CSI_efficientPropulsion_description
 		cost = 300
 		hideEmpty = False
-		nodeName = node7_specializedRocketry7
+		nodeName = node7_efficientPropulsion
 		anyToUnlock = False
-		icon = RDicon_propulsionSystems
+		icon = CSITechTree/Icon/csi_icon_efficientPropulsion
 		pos = -3200,2080,0
 		scale = 0.5
 		Parent
@@ -359,14 +359,14 @@
 	}
 	RDNode
 	{
-		id = specializedRocketry8
-		title = #LOC_CSI_specializedRocketry8_title
-		description = #LOC_CSI_specializedRocketry8_description
+		id = highEfficiencyPropulsion
+		title = #LOC_CSI_highEfficiencyPropulsion_title
+		description = #LOC_CSI_highEfficiencyPropulsion_description
 		cost = 550
 		hideEmpty = False
-		nodeName = node8_specializedRocketry8
+		nodeName = node8_highEfficiencyPropulsion
 		anyToUnlock = False
-		icon = RDicon_propulsionSystems
+		icon = CSITechTree/Icon/csi_icon_highEfficiencyPropulsion
 		pos = -3100,2080,0
 		scale = 0.5
 		Parent
@@ -378,14 +378,14 @@
 	}
 	RDNode
 	{
-		id = specializedRocketry9
-		title = #LOC_CSI_specializedRocketry9_title
-		description = #LOC_CSI_specializedRocketry9_description
+		id = higherEfficiencyPropulsion
+		title = #LOC_CSI_higherEfficiencyPropulsion_title
+		description = #LOC_CSI_higherEfficiencyPropulsion_description
 		cost = 1000
 		hideEmpty = False
-		nodeName = node9_specializedRocketry9
+		nodeName = node9_higherEfficiencyPropulsion
 		anyToUnlock = False
-		icon = RDicon_propulsionSystems
+		icon = CSITechTree/Icon/csi_icon_higherEfficiencyPropulsion
 		pos = -3000,2080,0
 		scale = 0.5
 		Parent
@@ -397,14 +397,14 @@
 	}
 	RDNode
 	{
-		id = specializedRocketry10
-		title = #LOC_CSI_specializedRocketry10_title
-		description = #LOC_CSI_specializedRocketry10_description
+		id = veryHighEfficiencyPropulsion
+		title = #LOC_CSI_veryHighEfficiencyPropulsion_title
+		description = #LOC_CSI_veryHighEfficiencyPropulsion_description
 		cost = 1500
 		hideEmpty = False
-		nodeName = node10_specializedRocketry10
+		nodeName = node10_veryHighEfficiencyPropulsion
 		anyToUnlock = False
-		icon = RDicon_propulsionSystems
+		icon = CSITechTree/Icon/csi_icon_veryHighEfficiencyPropulsion
 		pos = -2900,2080,0
 		scale = 0.5
 		Parent
@@ -416,14 +416,14 @@
 	}
 	RDNode
 	{
-		id = specializedRocketry11
-		title = #LOC_CSI_specializedRocketry11_title
-		description = #LOC_CSI_specializedRocketry11_description
+		id = tremendousEfficiencyPropulsion
+		title = #LOC_CSI_tremendousEfficiencyPropulsion_title
+		description = #LOC_CSI_tremendousEfficiencyPropulsion_description
 		cost = 2250
 		hideEmpty = False
-		nodeName = node11_specializedRocketry11
+		nodeName = node11_tremendousEfficiencyPropulsion
 		anyToUnlock = False
-		icon = RDicon_propulsionSystems
+		icon = CSITechTree/Icon/csi_icon_tremendousEfficiencyPropulsion
 		pos = -2800,2080,0
 		scale = 0.5
 		Parent
