Updated Node Names

--- a/CSI-Stock-Patch.cfg
+++ b/CSI-Stock-Patch.cfg
@@ -371,10 +371,10 @@
 }
 // ************************************* tier7  ************************************* 
 // nuclearPropulsion
-// specializedRocketry7
+// efficientPropulsion
 @PART[liquidEngine2-2_v2]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
-	@TechRequired = specializedRocketry7
+	@TechRequired = efficientPropulsion
 }
 // rocketry7
 @PART[SSME|liquidEngineMainsail_v2|Size2LFB_v2|Thoroughbred]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
@@ -481,10 +481,10 @@
 // ionPropulsion
 // nuclearFuelSystems
 // improvedNuclearPropulsion
-// specializedRocketry8
+// highEfficiencyPropulsion
 @PART[LiquidEngineRE-I2|LiquidEngineRE-J10]:NEEDS[CommunityTechTree,SquadExpansion/MakingHistory]:BEFORE[zzzCSITechTree]
 {
-	@TechRequired = specializedRocketry8
+	@TechRequired = highEfficiencyPropulsion
 }
 // veryHeavyRocketry
 // highPerformanceFuelSystems
@@ -543,10 +543,10 @@
 	@TechRequired = advIonPropulsion
 }
 // advNuclearPropulsion
-// specializedRocketry9
+// higherEfficiencyPropulsion
 @PART[toroidalAerospike]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
-	@TechRequired = specializedRocketry9
+	@TechRequired = higherEfficiencyPropulsion
 }
 // experimentalRocketry
 @PART[Size3EngineCluster]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
@@ -591,7 +591,7 @@
 // advGriddedThrusters
 // fusionRockets
 // expNuclearPropulsion
-// specializedRocketry10
+// veryHighEfficiencyPropulsion
 // giganticRocketry
 // exoticFuelStorage
 // orbitalMegastructures
@@ -612,10 +612,10 @@
 // advEMSystems
 // expGriddedThrusters
 // exoticNuclearPropulsion
-// specializedRocketry11
+// tremendousEfficiencyPropulsion
 @PART[Size3AdvancedEngine]:NEEDS[CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
-	@TechRequired = specializedRocketry11
+	@TechRequired = tremendousEfficiencyPropulsion
 }
 // colossalRocketry
 // extremeFuelStorage
