Node Names Updated

--- a/Mod Support/NearFutureLaunchVehicles.cfg
+++ b/Mod Support/NearFutureLaunchVehicles.cfg
@@ -23,7 +23,7 @@
 }
 @PART[engine-lfo-125-2]:NEEDS[CommunityTechTree,NearFutureLaunchVehicles]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = specializedRocketry9
+		@TechRequired = higherEfficiencyPropulsion
 }
 @PART[fueltank-5-1]:NEEDS[CommunityTechTree,NearFutureLaunchVehicles]:BEFORE[zzzCSITechTree]
 {
@@ -35,7 +35,7 @@
 }
 @PART[engine-lfo-advanced-25-2]:NEEDS[CommunityTechTree,NearFutureLaunchVehicles]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = specializedRocketry10
+		@TechRequired = veryHighEfficiencyPropulsion
 }
 @PART[fueltank-75-1|fueltank-75-2|fueltank-75-3|fueltank-75-4|fueltank-adapter-75-5-1|fueltank-adapter-75-5-2]:NEEDS[CommunityTechTree,NearFutureLaunchVehicles]:BEFORE[zzzCSITechTree]
 {
