--- a/Mod Support/NearFutureSpacecraft.cfg
+++ b/Mod Support/NearFutureSpacecraft.cfg
@@ -22,5 +22,5 @@
 }
 @PART[orbital-engine-375]:NEEDS[CommunityTechTree,NearFutureSpacecraft]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = specializedRocketry9
+		@TechRequired = higherEfficiencyPropulsion
 }
