--- a/Mod Support/RLA_Reborn.cfg
+++ b/Mod Support/RLA_Reborn.cfg
@@ -92,10 +92,10 @@
 
 @PART[RLA_mp_large_vac]:NEEDS[CommunityTechTree,RLA_Reborn]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = specializedRocketry7
+		@TechRequired = efficientPropulsion
 }
 
 @PART[RLA_mp_large_spike]:NEEDS[CommunityTechTree,RLA_Reborn]:BEFORE[zzzCSITechTree]
 {
-		@TechRequired = specializedRocketry8
+		@TechRequired = highEfficiencyPropulsion
 }
