--- a/Mod Support/reDIRECT.cfg
+++ b/Mod Support/reDIRECT.cfg
@@ -9,7 +9,7 @@
 }
 @PART[DIRECT_KL10|DIRECT_KL10_B|DIRECT_K2X]:NEEDS[reDIRECT&CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
-	@TechRequired = specializedRocketry8
+	@TechRequired = highEfficiencyPropulsion
 }
 @PART[DIRECT_SRB_2|DIRECT_SRB_4|DIRECT_SRB_5|DIRECT_SRB_adapter1|DIRECT_SRB_cone]:NEEDS[reDIRECT&CommunityTechTree]:BEFORE[zzzCSITechTree]
 {
