--- a/Mod Support/zzzRemovedNodes.cfg
+++ b/Mod Support/zzzRemovedNodes.cfg
@@ -5,62 +5,34 @@
 		@TechRequired = supersonicFlight	
 	}
 @PART[*]:HAS[#TechRequired[specializedFlightSystems]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = expAircraftEngines
-	}
+{
+ TechRequired = expAircraftEngines
+}
 @PART[*]:HAS[#TechRequired[automation]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = advUnmanned
-	}
+{
+ TechRequired = advUnmanned
+}
 @PART[*]:HAS[#TechRequired[experimentalMotors]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = mechatronics
-	}
+{
+ TechRequired = mechatronics
+}
 @PART[*]:HAS[#TechRequired[miniaturization]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = spaceExploration
-	}
+{
+ TechRequired = spaceExploration
+}
 @PART[*]:HAS[#TechRequired[precisionEngineering]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-	@TechRequired = advExploration
-	}
+{
+ TechRequired = advExploration
+}
 @PART[*]:HAS[#TechRequired[electronics]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-	@TechRequired = scienceTech
-	}
+{
+ TechRequired = scienceTech
+}
 @PART[*]:HAS[#TechRequired[fieldScience]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-	@TechRequired = advScienceTech
-	}
+{
+ TechRequired = advScienceTech
+}
 @PART[*]:HAS[#TechRequired[specializedScienceTech]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-	@TechRequired = experimentalScience
-	}
-@PART[*]:HAS[#TechRequired[automation]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = advUnmanned
-	}
-@PART[*]:HAS[#TechRequired[experimentalMotors]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = mechatronics
-	}
-@PART[*]:HAS[#TechRequired[miniaturization]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = spaceExploration
-	}
-@PART[*]:HAS[#TechRequired[precisionEngineering]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = advExploration
-	}
-@PART[*]:HAS[#TechRequired[electronics]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = scienceTech
-	}
-@PART[*]:HAS[#TechRequired[fieldScience]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = advScienceTech
-	}
-@PART[*]:HAS[#TechRequired[specializedScienceTech]]:NEEDS[CommunityTechTree]:LAST[zzzCSITechTree]
-	{
-		@TechRequired = experimentalScience
-	}
+{
+ TechRequired = experimentalScience
+}
