--- a/Mod Support/USI-MKS.cfg
+++ b/Mod Support/USI-MKS.cfg
@@ -1,163 +1,30 @@
 //UmbraSpaceIndustries/MKS
 //
-// ************************************* tier6
-// precisionPropulsion
-// heavierRocketry
-// advFuelSystems
-// structures3
-// specializedConstruction
-// actuators
-// advAerodynamics
-// supersonicFlight
-// specializedControl
-// advLanding
-@PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = advLanding
 }
-// commandModules
 @PART[SalamanderPod]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = commandModules
 }
-// hydroponics
-// basicLogistics
-// advExploration
-// comms2
-// advElectrics
-// advSolarTech
-// heatManagementSystems
 @PART[Ranger_HeatPump]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = heatManagementSystems
 }
-// ************************************* tier7
-// nuclearPropulsion
-// specializedRocketry7
-// rocketry7
-// largeVolumeContainment
-// composites
-// advMetalworks
-// advActuators
-// heavyAerodynamics
-// highAltitudeFlight
-// unmannedTech
-// heavyLanding
 @PART[PAL_MiniWheel]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = heavyLanding
 }
-// heavyCommandModules
-// stations
-// logistics
 @PART[Akita_Bed|Akita_Cab|Akita_Seat|Akita_Wheel|PAL_Ladder]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = logistics
 }
-// scienceTech
-// comms3
 @PART[Ranger_CommPak]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = comms3
 }
-// nuclearPower
-// largeElectrics
-// advPVMaterials
-// ************************************* tier8
-// ionPropulsion
-// nuclearFuelSystems
-// improvedNuclearPropulsion
-// specializedRocketry8
-// veryHeavyRocketry
-// highPerformanceFuelSystems
-// metaMaterials
-// nanolathing
-// experimentalActuators
-// experimentalAerodynamics
-// hypersonicFlight
-// advUnmanned
-// advancedMotors
-// specializedCommandModules
-// shortTermHabitation
 @PART[MKS_Drill_01*|Ranger_Crusher|Ranger_Sifter|Ranger_Smelter]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = shortTermHabitation
 }
-// advLogistics
-// advScienceTech
-// comms4
-// largeNuclearPower
-// specializedElectrics
-// cuttingEdgeSolarTech
-// advHeatManagement
-// ************************************* tier9
-// advIonPropulsion
-// advNuclearPropulsion
-// specializedRocketry9
-// experimentalRocketry
-// specializedFuelStorage
-// orbitalAssembly
-// exoticAlloys
-// offworldManufacturing
-// aerospaceComposites
-// aerospaceTech
-// largeUnmanned
-// specializedLanders
-// specializedCommandCenters
-// longTermHabitation
-// scientificOutposts
-// experimentalScience
-// comms5
-// advNuclearPower
-// experimentalElectrics
-// exoticSolarTech
-// specializedRadiators
-// ************************************* tier10
-// plasmaPropulsion
-// advGriddedThrusters
-// fusionRockets
-// expNuclearPropulsion
-// specializedRocketry10
-// giganticRocketry
-// exoticFuelStorage
-// orbitalMegastructures
-// mechatronics
-// advAerospaceEngineering
-// expAircraftEngines
-// artificialIntelligence
-// heavyLanders
-// heavyCommandCenters
-// advancedStations
-// advOffworldMining
-// longTermScienceTech
-// fusionPower
-// expNuclearPower
-// highTechElectricalSystems
-// microwavePowerTransmission
-// ************************************* tier11
-// advEMSystems
-// expGriddedThrusters
-// exoticNuclearPropulsion
-// specializedRocketry11
-// colossalRocketry
-// extremeFuelStorage
-// colonization
-// resourceExploitation
-// highEnergyScience
-// advFusionReactions
-// exoticNuclearPower
-// highPowerElectricalSystems
-// exoticRadiators
-// ************************************* tier12
-// specializedPlasmaGeneration
-// advColonization
-// appliedHighEnergyPhysics
-// exoticReactions
-// antimatterPower
-// experimentalElectricalSystems
-// ************************************* tier13
-// exoticPlasmaPropulsion
-// ultraHighEnergyPhysics
-// quantumReactions
-// unifiedFieldTheory
-// exoticElectricalSystems
