--- a/Mod Support/USI-MKS.cfg
+++ b/Mod Support/USI-MKS.cfg
@@ -1,6 +1,6 @@
 //UmbraSpaceIndustries/MKS
 //
-PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
+@PART[MKS_LandingWheel|ScoutLanderMk2]:NEEDS[CommunityTechTree,UmbraSpaceIndustries/MKS]:BEFORE[zzzCSITechTree]
 {
 		@TechRequired = advLanding
 }
