--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -39,8 +39,15 @@ Localization
 //earlyHeatManagement
 		#LOC_CSI_earlyHeatManagement_title = Early Heat Management
 		#LOC_CSI_earlyHeatManagement_description = Early Heat Management
+//Lifters
+	#LOC_CSI_heavyRocketry_title = Lifters
+	#LOC_CSI_heavierRocketry_title = Heavy Lifters
+	#LOC_CSI_rocketry7_title = Heavier Lifters
+	#LOC_CSI_veryHeavyRocketry_title = Very Heavy Lifters
+	#LOC_CSI_experimentalRocketry_title = Experimental Lifters
+	#LOC_CSI_giganticRocketry_title = Gigantic Lifters
+	#LOC_CSI_colossalRocketry_title = Colossal Lifters
 //rocketry7
-		#LOC_CSI_rocketry7_title = Quite Heavy Rocketry
 		#LOC_CSI_rocketry7_description = These rockets are very heavy indeed. Do you think the launch pad can hold them?
 //efficientPropulsion
 		#LOC_CSI_efficientPropulsion_title = Efficient Propulsion
