--- a/CSI-TechTree-Patch.cfg
+++ b/CSI-TechTree-Patch.cfg
@@ -371,7 +371,7 @@
 		scale = 0.5
 		Parent
 		{
-			parentID = specializedRocketry7
+			parentID = efficientPropulsion
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
@@ -390,7 +390,7 @@
 		scale = 0.5
 		Parent
 		{
-			parentID = specializedRocketry8
+			parentID = highEfficiencyPropulsion
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
@@ -409,7 +409,7 @@
 		scale = 0.5
 		Parent
 		{
-			parentID = specializedRocketry9
+			parentID = higherEfficiencyPropulsion
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
@@ -428,7 +428,7 @@
 		scale = 0.5
 		Parent
 		{
-			parentID = specializedRocketry10
+			parentID = veryHighEfficiencyPropulsion
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
@@ -462,6 +462,7 @@
 		@cost = 90
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = @title = #LOC_CSI_heavyRocketry_title
 		@pos = -3400,2040,0
 		@scale = 0.5
 	}
@@ -470,6 +471,7 @@
 		@cost = 160
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = @title = #LOC_CSI_heavierRocketry_title
 		@pos = -3300,2040,0
 		@scale = 0.5
 	}
@@ -497,6 +499,7 @@
 		@cost = 550
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = @title = #LOC_CSI_veryHeavyRocketry_title
 		@pos = -3100,2040,0
 		@scale = 0.5
 		-Parent {}
@@ -512,6 +515,7 @@
 		@cost = 1000
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = @title = #LOC_CSI_experimentalRocketry_title
 		@pos = -3000,2040,0
 		@scale = 0.5
 	}
@@ -520,6 +524,7 @@
 		@cost = 1500
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = @title = #LOC_CSI_giganticRocketry_title
 		@pos = -2900,2040,0
 		@scale = 0.5
 	}
@@ -528,6 +533,7 @@
 		@cost = 2250
 		@hideEmpty = False
 		@anyToUnlock = False
+		@icon = @title = #LOC_CSI_colossalRocketry_title
 		@pos = -2800,2040,0
 		@scale = 0.5
 	}
