--- a/CSI-TechTree-Patch.cfg
+++ b/CSI-TechTree-Patch.cfg
@@ -462,18 +462,18 @@
 		@cost = 90
 		@hideEmpty = False
 		@anyToUnlock = False
-		@icon = @title = #LOC_CSI_heavyRocketry_title
 		@pos = -3400,2040,0
 		@scale = 0.5
+		@title = #LOC_CSI_heavyRocketry_title
 	}
 	@RDNode:HAS[#id[heavierRocketry]]
 	{
 		@cost = 160
 		@hideEmpty = False
 		@anyToUnlock = False
-		@icon = @title = #LOC_CSI_heavierRocketry_title
 		@pos = -3300,2040,0
 		@scale = 0.5
+		@title = #LOC_CSI_heavierRocketry_title
 	}
 	RDNode
 	{
@@ -499,43 +499,44 @@
 		@cost = 550
 		@hideEmpty = False
 		@anyToUnlock = False
-		@icon = @title = #LOC_CSI_veryHeavyRocketry_title
 		@pos = -3100,2040,0
 		@scale = 0.5
 		-Parent {}
+-Parent {}
 		Parent
 		{
 			parentID = rocketry7
 			lineFrom = RIGHT
 			lineTo = LEFT
 		}
+		@title = #LOC_CSI_veryHeavyRocketry_title
 	}
 	@RDNode:HAS[#id[experimentalRocketry]]
 	{
 		@cost = 1000
 		@hideEmpty = False
 		@anyToUnlock = False
-		@icon = @title = #LOC_CSI_experimentalRocketry_title
 		@pos = -3000,2040,0
 		@scale = 0.5
+		@title = #LOC_CSI_experimentalRocketry_title
 	}
 	@RDNode:HAS[#id[giganticRocketry]]
 	{
 		@cost = 1500
 		@hideEmpty = False
 		@anyToUnlock = False
-		@icon = @title = #LOC_CSI_giganticRocketry_title
 		@pos = -2900,2040,0
 		@scale = 0.5
+		@title = #LOC_CSI_giganticRocketry_title
 	}
 	@RDNode:HAS[#id[colossalRocketry]]
 	{
 		@cost = 2250
 		@hideEmpty = False
 		@anyToUnlock = False
-		@icon = @title = #LOC_CSI_colossalRocketry_title
 		@pos = -2800,2040,0
 		@scale = 0.5
+		@title = #LOC_CSI_colossalRocketry_title
 	}
 	RDNode
 	{
