Updates to file layouts

--- a/CSI-SquadExpansion2.cfg
+++ b/CSI-SquadExpansion2.cfg
@@ -1,3 +1,6 @@
+// ************************************* Serenity *************************************
+// ****************************************************************************************** 
+//
 // plasmaPropulsion
 // advEMSystems
 // specializedPlasmaGeneration
@@ -39,8 +42,20 @@
 // exoticFuelStorage
 // extremeFuelStorage
 // structures1
+@PART[sGripStrip|sGripPad]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = structures1
+	}
 // structures2
+@PART[mGripPad]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = structures2
+	}
 // structures3
+@PART[lGripPad|lGripStrip]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = structures3
+	}
 // composites
 // metaMaterials
 // orbitalAssembly
@@ -54,7 +69,15 @@
 // nanolathing
 // exoticAlloys
 // actuators
+@PART[hinge_01|hinge_01_s|hinge_03|hinge_03_s|hinge_04|piston_01|piston_02|piston_03|piston_04|controller1000]:NEEDS[SquadExpansion/Serenity,CommunityTechTree]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = actuators
+	}
 // advActuators
+@PART[rotor_01|rotor_02|rotor_03|rotoServo_00|rotoServo_02|rotoServo_03|rotoServo_04]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advActuators
+	}
 // experimentalActuators
 // offworldManufacturing
 // mechatronics
@@ -65,7 +88,15 @@
 // aerospaceComposites
 // advAerospaceEngineering
 // earlyAviation
+@PART[RotorEngine_03|smallHeliBlade|mediumHeliBlade|largeHeliBlade]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = earlyAviation
+	}
 // aviation
+@PART[smallFanBlade|mediumFanBlade|largeFanBlade|FanShroud_01|FanShroud_02|FanShroud_03]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = aviation
+	}
 // subsonicFlight
 // supersonicFlight
 // highAltitudeFlight
@@ -74,6 +105,10 @@
 // expAircraftEngines
 // start
 // aeronautics
+@PART[RotorEngine_02|smallPropeller|mediumPropeller|largePropeller|noseconeVS|noseconeTiny|EnginePlate1]:NEEDS[SquadExpansion/Serenity]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = aeronautics
+	}
 // stability
 // flightControl
 // advFlightControl
@@ -115,8 +150,20 @@
 // basicScience
 // groundScience
 // spaceExploration
+@PART[DeployedGoExOb]:NEEDS[SquadExpansion/Serenity,CommunityTechTree]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = spaceExploration
+	}
 // advExploration
+@PART[DeployedWeatherStn]:NEEDS[SquadExpansion/Serenity,CommunityTechTree]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = advExploration
+	}
 // scienceTech
+@PART[DeployedSeismicSensor]:NEEDS[SquadExpansion/Serenity,CommunityTechTree]:BEFORE[zzzCSITechTree]
+	{
+		@TechRequired = scienceTech
+	}
 // advScienceTech
 // experimentalScience
 // longTermScienceTech
